--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -241,8 +241,8 @@
                 <div id="collapseOrd" class="collapse" data-bs-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="https://localhost:7111/Orders">訂單紀錄</a>
-                        <a class="collapse-item" href="https://localhost:7111/Orders">出貨管理</a>
-                        <a class="collapse-item" href="#">請款/退款作業</a>
+                        <a class="collapse-item" href="https://localhost:7111/OrderStatus/Index">出貨管理</a>
+                        @* <a class="collapse-item" href="#">請款/退款作業</a> *@
                     </div>
                 </div>
             </li>
@@ -274,12 +274,15 @@
 
             <!-- 營運分析 -->
             <li class="px-3 nav-item">
-                <a class="d-flex align-items-center nav-link txtWhite" href="#">
+                <a class="d-flex align-items-center nav-link txtWhite" href="https://localhost:7111/Analysis">
                     <span class="icon-wrapper">
                         <i class="fas fa-fw fa-chart-area"></i>
                     </span>
                     <span class="link-text">營運分析</span>
                 </a>
+
+
+               
             </li>
 
 
