--- a/StarProject/wwwroot/css/site.css
+++ b/StarProject/wwwroot/css/site.css
@@ -67,6 +67,23 @@ html {
     box-shadow: 20px 20px 15px #bdbdbd, -20px -20px 15px #ffffff;
 }
 
+.timeline {
+    list-style: none;
+    padding: 0;
+    position: relative;
+}
+
+    .timeline li {
+        margin: 20px 0;
+        padding-left: 20px;
+        border-left: 3px solid #007bff;
+    }
+
+        .timeline li strong {
+            color: #007bff;
+        }
+
+
 .category-title {
     color: #001a75;
 }
