--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/StarProject.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/home.css">
     <link href="~/css/companynotifyvc.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -25,16 +26,15 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
 
+    <!-- chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <!-- 動畫 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-<<<<<<< HEAD
+
     
   @RenderSection("Styles", required: false)
     <link rel="icon" type="image/png" href="~/img/logo.png">
-=======
-    <!-- chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
->>>>>>> MM0916
 
 </head>
 
