--- a/StarProject/Views/Orders/Details.cshtml
+++ b/StarProject/Views/Orders/Details.cshtml
@@ -41,10 +41,12 @@
                         <td>@item.Name</td>
                         <td><img src="@item.Image" alt="@item.Name" style="max-width:100px; height:auto;" /></td>
                         <td>@item.Type</td>
-                        <td><input type="number" class="form-control form-control-sm qty-input" value="@item.Quantity" style="width:80px;" /></td>
-                        <td>@string.Format("{0:C}", item.UnitPrice)</td>
-                        <td><input type="number" class="form-control form-control-sm discount-input" value="@item.Discount" step="0.01" style="width:80px;" /></td>
-                        <td class="price">@string.Format("{0:C}", item.DiscountedPrice)</td>
+                        <td>@item.Quantity</td>
+
+                        <td>@string.Format("{0:N0}", item.UnitPrice) 元</td>
+                        <td>@string.Format("{0:N0}", item.Discount)</td>
+                       
+                        <td class="price">@string.Format("{0:C}", item.DiscountedPrice)元</td>
                      
                     </tr>
                 }
