--- a/StarProject/Views/Emps/_PaginationPartial.cshtml
+++ b/StarProject/Views/Emps/_PaginationPartial.cshtml
@@ -6,14 +6,14 @@
 }
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
-        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+        @for (int i = 1; i <= totalPages; i++)
         {
-            <li class="page-item @(i == ViewBag.Page ? "active" : "") @(ViewBag.TotalPages == 1 ? "disabled" : "")">
+            <li class="page-item @(i == page ? "active" : "") @(totalPages == 1 ? "disabled" : "")">
                 <a class="page-link" href="javascript:void(0);" onclick="refreshEmpTable(@i)" data-page="@i">@i</a>
             </li>
         }
     </ul>
 </nav>
 <div class="text-center mb-2">
-    <span>共 @ViewBag.Total 筆資料，頁數 <span id="paginationInfo">@ViewBag.Page</span> / @ViewBag.TotalPages</span>
+    <span>共 @total 筆資料，頁數 <span id="paginationInfo">@@page</span> / @totalPages</span>
 </div>
