還在修改畫面，好難...

--- a/StarProject/Views/Emps/Index.cshtml
+++ b/StarProject/Views/Emps/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "員工列表";
 }
 <head>
-	<link href="~/css/lostinfo.css" rel="stylesheet" />
+	<link href="~/css/lostinfoindex.min.css" rel="stylesheet" />
 </head>
 
 <main class="flex-fill position-relative">
