--- a/StarProject/Views/TicketStock/Create.cshtml
+++ b/StarProject/Views/TicketStock/Create.cshtml
@@ -1,42 +1,77 @@
 ﻿@model StarProject.Models.TicketStock
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "票券庫存設定";
 }
 
-<h1>Create</h1>
+<head>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
 
-<h4>TicketStock</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TicketNo" class="control-label"></label>
-                <select asp-for="TicketNo" class ="form-control" asp-items="ViewBag.TicketNo"></select>
+        .btn-topbar {
+            --bs-btn-bg: rgb(250, 208, 72);
+            --bs-btn-border-color: rgb(250, 208, 72);
+            --bs-btn-hover-bg: rgba(250, 208, 72, 0.692);
+            --bs-btn-hover-border-color: rgba(250, 208, 72, 0.692);
+            --bs-btn-focus-shadow-rgb: 217, 164, 6;
+            --bs-btn-active-bg: #ffcd39;
+            --bs-btn-active-border-color: #ffc720;
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+        }
+
+        .btn-outline-back {
+            --bs-btn-color: #DC3545;
+            --bs-btn-border-color: #DC3545;
+            --bs-btn-hover-color: #DC3545;
+            --bs-btn-hover-bg: #f8e6e9;
+            --bs-btn-hover-border-color: #DC3545;
+            --bs-btn-focus-shadow-rgb: 255, 193, 7;
+            --bs-btn-active-color: #DC3545;
+            --bs-btn-active-border-color: #DC3545;
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+            --bs-gradient: none;
+        }
+
+        .btn-outline-excel {
+            --bs-btn-color: rgb(0, 0, 0);
+            --bs-btn-border-color: rgb(0, 0, 0);
+            --bs-btn-hover-color: rgb(0, 0, 0);
+            --bs-btn-hover-bg: rgba(250, 208, 72, 0.692);
+            --bs-btn-hover-border-color: rgb(0, 0, 0);
+            --bs-btn-focus-shadow-rgb: 255, 193, 7;
+            --bs-btn-active-color: rgb(0, 0, 0);
+            --bs-btn-active-border-color: rgb(0, 0, 0);
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+            --bs-gradient: none;
+        }
+    </style>
+</head>
+<h1 class="fw-bold">票券庫存設定</h1>
+
+<div class="p-4 mt-3 rounded-4 bg-white">
+    <div>
+        <div class="row">
+            <div class="col-6 m-5">
+                <a asp-controller="TicketStock" asp-action="DownloadTemplate" class="btn btn-outline-excel fw-bold fs-5 mb-3">
+                    <i class="fa-solid fa-file-excel"></i>下載excel範本
+                </a>
+                <form asp-controller="TicketStock" asp-action="CreateMultiple" method="post" enctype="multipart/form-data">
+                    <input type="file" class="form-control fs-5" name="excelFile">
+                    <div class="form-group d-flex gap-2 mt-3">
+                        <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5" for="excelFile">上傳匯入</button>
+                        <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Stock" class="control-label"></label>
-                <input asp-for="Stock" class="form-control" />
-                <span asp-validation-for="Stock" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
