--- a/StarProject/Views/Login/Index.cshtml
+++ b/StarProject/Views/Login/Index.cshtml
@@ -3,7 +3,6 @@
 @{
 	Layout = null;
 }
-}
 @{
     ViewData["Title"] = "登入";
 }
@@ -304,10 +303,9 @@
 
         }
 
-        @@media (max-height: 700px) {
+        @@media (max-height: 700px)
+        
             .login-container
-
-        {
             padding: 30px 40px;
         }
 
@@ -322,7 +320,6 @@
             margin-bottom: 20px;
         }
 
-        }
     </style>
 </head>
 <body>
